# inkvoice

./: .gitignore  setup.ps1
blueprint/: CLAUDE.md  PLAYBOOK.md  README.md  new-project.ps1
blueprint/docs/: ARCHITECTURE.md  BUILD_LOG.md  CHANGELOG.md  CONTEXT.md  EXECUTION_PLAN.md  PRD.md  SESSION_STATE.md  STORIES.md  TEST_SCENARIOS.md
docs/: ARCHITECTURE.md  BUILD_LOG.md  CHANGELOG.md  CONTEXT.md  EXECUTION_PLAN.md  PRD.md  STORIES.md  TEST_SCENARIOS.md
src/shell/: Cargo.toml
src/shell/src/: command_mode.rs  main.rs  modes.rs  overlay.rs  text_insert.rs
src/sidecar/: ai_rewrite.py  asr_server.py  cleanup.py  dashboard.html  dashboard.py  mode_format.py  personal_dictionary.py
tests/: test_ai_rewrite.py  test_cleanup.py  test_mode_format.py  test_personal_dictionary.py
