[package]
name = "inkvoice-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
serde_json = "1"
base64 = "0.22"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
] }

[profile.release]
opt-level = 2
lto = true
